# internal/types/batch_sign_response.go
@@ -1,0 +1,173 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// BatchSignResponse batch sign response
+//
+// swagger:model batchSignResponse
+type BatchSignResponse struct {
+
+	// failed
+	// Example: 1
+	// Required: true
+	Failed *int64 `json:"failed"`
+
+	// signatures
+	// Required: true
+	Signatures []*SignResponse `json:"signatures"`
+
+	// success
+	// Example: 9
+	// Required: true
+	Success *int64 `json:"success"`
+
+	// total
+	// Example: 10
+	// Required: true
+	Total *int64 `json:"total"`
+}
+
+// Validate validates this batch sign response
+func (m *BatchSignResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateFailed(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSignatures(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSuccess(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTotal(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *BatchSignResponse) validateFailed(formats strfmt.Registry) error {
+
+	if err := validate.Required("failed", "body", m.Failed); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *BatchSignResponse) validateSignatures(formats strfmt.Registry) error {
+
+	if err := validate.Required("signatures", "body", m.Signatures); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Signatures); i++ {
+		if swag.IsZero(m.Signatures[i]) { // not required
+			continue
+		}
+
+		if m.Signatures[i] != nil {
+			if err := m.Signatures[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("signatures" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("signatures" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *BatchSignResponse) validateSuccess(formats strfmt.Registry) error {
+
+	if err := validate.Required("success", "body", m.Success); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *BatchSignResponse) validateTotal(formats strfmt.Registry) error {
+
+	if err := validate.Required("total", "body", m.Total); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this batch sign response based on the context it is used
+func (m *BatchSignResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateSignatures(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *BatchSignResponse) contextValidateSignatures(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Signatures); i++ {
+
+		if m.Signatures[i] != nil {
+			if err := m.Signatures[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("signatures" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("signatures" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BatchSignResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BatchSignResponse) UnmarshalBinary(b []byte) error {
+	var res BatchSignResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
