# internal/types/verify_response.go
@@ -1,0 +1,115 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// VerifyResponse verify response
+//
+// swagger:model verifyResponse
+type VerifyResponse struct {
+
+	// address
+	// Example: 0x742d35Cc6634C0532925a3b844Bc9e7595f0bEb
+	Address string `json:"address,omitempty"`
+
+	// public key
+	// Required: true
+	PublicKey *string `json:"public_key"`
+
+	// valid
+	// Example: true
+	// Required: true
+	Valid *bool `json:"valid"`
+
+	// verified at
+	// Required: true
+	// Format: date-time
+	VerifiedAt *strfmt.DateTime `json:"verified_at"`
+}
+
+// Validate validates this verify response
+func (m *VerifyResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validatePublicKey(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateValid(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateVerifiedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *VerifyResponse) validatePublicKey(formats strfmt.Registry) error {
+
+	if err := validate.Required("public_key", "body", m.PublicKey); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *VerifyResponse) validateValid(formats strfmt.Registry) error {
+
+	if err := validate.Required("valid", "body", m.Valid); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *VerifyResponse) validateVerifiedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("verified_at", "body", m.VerifiedAt); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("verified_at", "body", "date-time", m.VerifiedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this verify response based on context it is used
+func (m *VerifyResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *VerifyResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *VerifyResponse) UnmarshalBinary(b []byte) error {
+	var res VerifyResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
